// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`git imports basic repository 1`] = `
[
  "https://test.exp.host/--/api/v2/snack/save",
  {
    "body": {
      "code": {
        "App.js": {
          "contents": "console.log('Hello World');",
          "type": "CODE",
        },
        "app.json": {
          "contents": "{"expo":{"name":"test1","sdkVersion":"50.0.0"}}",
          "type": "CODE",
        },
      },
      "dependencies": {
        "expo-asset": {
          "version": "latest",
        },
      },
      "isDraft": false,
      "manifest": {
        "dependencies": {
          "expo-asset": "latest",
        },
        "description": "test1 @ Jan 1, 2020",
        "name": "test1",
        "sdkVersion": "50.0.0",
      },
    },
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`git imports repository created with main branch 1`] = `
[
  "https://test.exp.host/--/api/v2/snack/save",
  {
    "body": {
      "code": {
        "App.js": {
          "contents": "console.log('Hello World');",
          "type": "CODE",
        },
        "app.json": {
          "contents": "{"expo":{"name":"test1","sdkVersion":"50.0.0"}}",
          "type": "CODE",
        },
      },
      "dependencies": {
        "expo-asset": {
          "version": "latest",
        },
      },
      "isDraft": false,
      "manifest": {
        "dependencies": {
          "expo-asset": "latest",
        },
        "description": "test1 @ Jan 1, 2020",
        "name": "test1",
        "sdkVersion": "50.0.0",
      },
    },
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`git imports repository with app.config.js 1`] = `
[
  "https://test.exp.host/--/api/v2/snack/save",
  {
    "body": {
      "code": {
        "App.js": {
          "contents": "console.log('Hello World');",
          "type": "CODE",
        },
        "app.config.js": {
          "contents": "export default {"name":"some-example","sdkVersion":"50.0.0"};",
          "type": "CODE",
        },
      },
      "dependencies": {
        "expo-asset": {
          "version": "latest",
        },
      },
      "isDraft": false,
      "manifest": {
        "dependencies": {
          "expo-asset": "latest",
        },
        "description": "some-example @ Jan 1, 2020",
        "name": "some-example",
        "sdkVersion": "50.0.0",
      },
    },
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`git imports repository with assets 1`] = `"https://test.exp.host/--/api/v2/snack/uploadAsset"`;

exports[`git imports repository with assets 2`] = `
[
  "https://test.exp.host/--/api/v2/snack/save",
  {
    "body": {
      "code": {
        "App.js": {
          "contents": "console.log('Hello World');",
          "type": "CODE",
        },
        "app.json": {
          "contents": "{"expo":{"name":"some-example","sdkVersion":"50.0.0"}}",
          "type": "CODE",
        },
        "assets/image.png": {
          "contents": "https://myuploadedasset.com/777",
          "type": "ASSET",
        },
      },
      "dependencies": {
        "expo-asset": {
          "version": "latest",
        },
      },
      "isDraft": false,
      "manifest": {
        "dependencies": {
          "expo-asset": "latest",
        },
        "description": "some-example @ Jan 1, 2020",
        "name": "some-example",
        "sdkVersion": "50.0.0",
      },
    },
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`git imports repository with custom branch 1`] = `
[
  "https://test.exp.host/--/api/v2/snack/save",
  {
    "body": {
      "code": {
        "App.js": {
          "contents": "console.log('Hello World');",
          "type": "CODE",
        },
        "app.json": {
          "contents": "{"expo":{"name":"test1","sdkVersion":"50.0.0"}}",
          "type": "CODE",
        },
      },
      "dependencies": {
        "expo-asset": {
          "version": "latest",
        },
      },
      "isDraft": false,
      "manifest": {
        "dependencies": {
          "expo-asset": "latest",
        },
        "description": "test1@feature-a @ Jan 1, 2020",
        "name": "test1@feature-a",
        "sdkVersion": "50.0.0",
      },
    },
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`git imports repository with no sdkVersion 1`] = `
[
  "https://test.exp.host/--/api/v2/snack/save",
  {
    "body": {
      "code": {
        "App.js": {
          "contents": "console.log('Hello World');",
          "type": "CODE",
        },
        "app.json": {
          "contents": "{"expo":{"name":"test2"}}",
          "type": "CODE",
        },
      },
      "dependencies": {
        "expo-asset": {
          "version": "latest",
        },
      },
      "isDraft": false,
      "manifest": {
        "dependencies": {
          "expo-asset": "latest",
        },
        "description": "test2 @ Jan 1, 2020",
        "name": "test2",
        "sdkVersion": "51.0.0",
      },
    },
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`git imports repository with too old sdkVersion 1`] = `
[
  "https://test.exp.host/--/api/v2/snack/save",
  {
    "body": {
      "code": {
        "App.js": {
          "contents": "console.log('Hello World');",
          "type": "CODE",
        },
        "app.json": {
          "contents": "{"expo":{"name":"test3","sdkVersion":"22.0.0"}}",
          "type": "CODE",
        },
      },
      "dependencies": {
        "expo-asset": {
          "version": "latest",
        },
      },
      "isDraft": false,
      "manifest": {
        "dependencies": {
          "expo-asset": "latest",
        },
        "description": "test3 @ Jan 1, 2020",
        "name": "test3",
        "sdkVersion": "51.0.0",
      },
    },
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;

exports[`git imports repository without app.json 1`] = `
[
  "https://test.exp.host/--/api/v2/snack/save",
  {
    "body": {
      "code": {
        "App.js": {
          "contents": "console.log('Hello World');",
          "type": "CODE",
        },
      },
      "dependencies": {
        "expo-asset": {
          "version": "latest",
        },
      },
      "isDraft": false,
      "manifest": {
        "dependencies": {
          "expo-asset": "latest",
        },
        "description": "some-example @ Jan 1, 2020",
        "name": "some-example",
        "sdkVersion": "51.0.0",
      },
    },
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
]
`;
